src/objects/CustomServicesRequest__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Custom_Services_Request</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmountOfLargerDealContract__c</fullName>
        <label>Amount of Larger Deal/Contract</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountOfRevenue__c</fullName>
        <inlineHelpText>Amount of revenue tied exclusively to this deliverable.</inlineHelpText>
        <label>Amount of Revenue</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DeliverableFrequency__c</fullName>
        <label>Deliverable Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recurring - Monthly</fullName>
                </value>
                <value>
                    <fullName>Recurring - Quarterly</fullName>
                </value>
                <value>
                    <fullName>Recurring - Other</fullName>
                </value>
                <value>
                    <fullName>Ad-hoc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MockupExample__c</fullName>
        <inlineHelpText>Do you have a mock-up or example?  If so, please attach.</inlineHelpText>
        <label>Mockup/Example</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>CustomServicesRequest</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PartOfALargerDealContract__c</fullName>
        <inlineHelpText>Is this deliverable part of a larger deal/contract?</inlineHelpText>
        <label>Part of a Larger Deal/Contract</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PurposeOfDeliverable__c</fullName>
        <label>Purpose of Deliverable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Regular Sale</fullName>
                </value>
                <value>
                    <fullName>Capabilities Scope/Sample Report</fullName>
                </value>
                <value>
                    <fullName>Freebie</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Request</fullName>
                </value>
                <value>
                    <fullName>Consulting Support</fullName>
                </value>
                <value>
                    <fullName>Custom Client Request</fullName>
                </value>
                <value>
                    <fullName>Press Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestedDeliveryDate__c</fullName>
        <label>Requested Delivery Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequiresTechnology__c</fullName>
        <inlineHelpText>Does this request require help from the Technology Department?</inlineHelpText>
        <label>Requires Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unsure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RevenueTiedToThisDeliverable__c</fullName>
        <inlineHelpText>Is there revenue tied exclusively to this deliverable?</inlineHelpText>
        <label>Revenue Tied to This Deliverable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SignedContractInZuora__c</fullName>
        <inlineHelpText>If yes, please select Opportunity.</inlineHelpText>
        <label>Signed Contract in Zuora</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SummaryOfRequest__c</fullName>
        <inlineHelpText>If you would like to attach an email chain, you must ALSO summarize the details of your request.</inlineHelpText>
        <label>Summary of Request</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <label>Technology Custom Services Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RequestedDeliveryDate__c</columns>
        <columns>RequestType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>DeliverableFrequency__c</columns>
        <columns>RequiresTechnology__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllOpenRequests</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RequestedDeliveryDate__c</columns>
        <columns>RequestType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>DeliverableFrequency__c</columns>
        <columns>RequiresTechnology__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>All Open Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllOpenRequestsRequireTechnology</fullName>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RequestedDeliveryDate__c</columns>
        <columns>RequestType__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>DeliverableFrequency__c</columns>
        <columns>RequiresTechnology__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <filters>
            <field>RequiresTechnology__c</field>
            <operation>equals</operation>
            <value>Yes,Unsure</value>
        </filters>
        <label>All Open Requires Technology</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Custom Services Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Technology Custom Services Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>